group功能create的实现
