# docs/swagger.yaml
@@ -21,6 +21,17 @@ definitions:
       setCookie:
         type: boolean
     type: object
+  model.CreatedGroup:
+    properties:
+      creatorId:
+        description: 创建者ID
+        type: integer
+      describe:
+        description: 描述
+        type: string
+      name:
+        type: string
+    type: object
   model.CreatedUser:
     properties:
       avatar:
@@ -31,6 +42,39 @@ definitions:
         type: string
       password:
         type: string
+    type: object
+  model.Group:
+    properties:
+      createdAt:
+        type: string
+      creatorId:
+        description: 创作者Id
+        type: integer
+      describe:
+        description: 描述
+        type: string
+      id:
+        type: integer
+      kind:
+        description: 种类
+        type: string
+      name:
+        type: string
+      roles:
+        description: 角色组集合
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
+      updatedAt:
+        type: string
+      updaterId:
+        description: 更新 Id
+        type: integer
+      users:
+        description: 用户集合
+        items:
+          $ref: '#/definitions/model.User'
+        type: array
     type: object
   model.JWTToken:
     properties:
@@ -197,6 +241,35 @@ paths:
       summary: Register user | 注册用户
       tags:
       - auth
+  /api/v1/groups:
+    post:
+      consumes:
+      - application/json
+      description: Create group and stroage | 创建 group 和 stroage 存储
+      parameters:
+      - description: group info
+        in: body
+        name: group
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreatedGroup'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.Group'
+              type: object
+      security:
+      - JWT: []
+      summary: Create group | 创建 group
+      tags:
+      - group
   /api/v1/operations:
     get:
       description: List operations | 操作列表
@@ -216,7 +289,7 @@ paths:
               type: object
       security:
       - JWT: []
-      summary: List operations
+      summary: List operations | 操作列表
       tags:
       - rbac
   /api/v1/resources:
@@ -238,7 +311,7 @@ paths:
               type: object
       security:
       - JWT: []
-      summary: List resources
+      summary: List resources | 资源列表
       tags:
       - rbac
   /api/v1/roles:
@@ -258,7 +331,7 @@ paths:
               type: object
       security:
       - JWT: []
-      summary: List rbac role
+      summary: List rbac role | rbac 角色列表
       tags:
       - rbac
     post:
@@ -281,7 +354,7 @@ paths:
             $ref: '#/definitions/common.Response'
       security:
       - JWT: []
-      summary: Create rbac role
+      summary: Create rbac role | 创建 rbac 的角色
       tags:
       - rbac
   /api/v1/roles/{id}:
@@ -302,11 +375,11 @@ paths:
             $ref: '#/definitions/common.Response'
       security:
       - JWT: []
-      summary: Delete role
+      summary: Delete role | 删除角色
       tags:
       - rbac
     get:
-      description: Get role  | 获取一个 rbac 的角色
+      description: Get role | 获取一个 rbac 的角色
       parameters:
       - description: role id
         in: path
@@ -327,7 +400,7 @@ paths:
               type: object
       security:
       - JWT: []
-      summary: Get role
+      summary: Get role | 获取一个 rbac 的角色
       tags:
       - rbac
     put:
@@ -360,7 +433,7 @@ paths:
               type: object
       security:
       - JWT: []
-      summary: Update rbac role
+      summary: Update rbac role | rbac 修改角色
       tags:
       - rbac
   /api/v1/users:
